--- a/package.json
+++ b/package.json
@@ -63,14 +63,11 @@
     "@types/chance": "^1.1.6",
     "@types/sprintf-js": "^1.1.2",
     "@vitejs/plugin-vue": "^4.5.2",
-    "@vuepress/plugin-toc": "^2.0.0-rc.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-dts": "^3.7.2",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^1.8.25",
-    "vuepress": "^2.0.0-rc.0"
+    "vitest": "^0.34.4"
   }
 }
