--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/crypto-js": "^4.1.2",
     "@types/lodash": "^4.14.202",
     "chance": "^1.1.11",
+    "crypto-js": "^4.2.0",
     "json5": "^2.2.3",
     "lodash": "^4.17.21",
     "sass": "^1.66.1",
