--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "allowJs": false,
