--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/sprintf-js": "^1.1.3",
     "chance": "^1.1.11",
     "crypto-js": "^4.2.0",
+    "html2canvas": "^1.4.1",
     "json5": "^2.2.3",
     "lodash": "^4.17.21",
     "sprintf-js": "^1.1.3",
@@ -62,9 +63,9 @@
   "devDependencies": {
     "@types/chance": "^1.1.6",
     "@vitejs/plugin-vue": "^4.5.2",
+    "sass": "^1.70.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "sass": "^1.70.0",
     "vite": "^5.3.1",
     "vitest": "^0.34.4",
     "vue-tsc": "^2.1.4"
