--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
       "types": "./index.d.ts"
     },
     "./style.css": "./dist/style.css",
-    "./style.scss": "./src/style.scss",
+    "./style.scss": "./srsc/style.scss",
+    "./sass/_all.scss": "./src/assets/style/_all.scss",
+    "./sass/app.scss": "./src/assets/style/app.scss",
     "./scss": "./src/assets/style/_all.scss"
   },
   "scripts": {
@@ -56,18 +58,18 @@
     "json5": "^2.2.3",
     "lodash": "^4.17.21",
     "sprintf-js": "^1.1.3",
-    "vue": "^3.5",
+    "vue": "^3.5.12",
     "vue-router": "^4.2.5",
     "vue-server-renderer": "^2.7.15"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "sass": "^1.70.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "sass": "^1.80.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.1",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^2.1.4"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vitest": "^0.4.0",
+    "vue-tsc": "^2.1.6"
   }
 }
