--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@site0/tijs",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "description": "Web UI Libraray base on Vue",
   "repository": {
     "type": "git",
@@ -37,8 +37,7 @@
     "./style.css": "./dist/style.css",
     "./style.scss": "./srsc/style.scss",
     "./sass/_all.scss": "./src/assets/style/_all.scss",
-    "./sass/app.scss": "./src/assets/style/app.scss",
-    "./scss": "./src/assets/style/_all.scss"
+    "./sass/app.scss": "./src/assets/style/app.scss"
   },
   "scripts": {
     "build": "vue-tsc && vite build && tsc --emitDeclarationOnly",
@@ -49,8 +48,8 @@
   },
   "dependencies": {
     "@types/crypto-js": "^4.1.2",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.11.16",
+    "@types/lodash": "^4.17.12",
+    "@types/node": "^22.7.9",
     "@types/sprintf-js": "^1.1.3",
     "chance": "^1.1.11",
     "crypto-js": "^4.2.0",
@@ -59,8 +58,8 @@
     "lodash": "^4.17.21",
     "sprintf-js": "^1.1.3",
     "vue": "^3.5.12",
-    "vue-router": "^4.2.5",
-    "vue-server-renderer": "^2.7.15"
+    "vue-router": "^4.4.5",
+    "vue-server-renderer": "^2.7.16"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
@@ -69,7 +68,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "vitest": "^0.4.0",
+    "vitest": "^2.1.3",
     "vue-tsc": "^2.1.6"
   }
 }
