--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "lodash": "^4.17.21",
     "sprintf-js": "^1.1.3",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
-    "vue-server-renderer": "^2.7.16"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
