--- a/package.json
+++ b/package.json
@@ -51,17 +51,20 @@
     "@types/lodash": "^4.17.12",
     "@types/node": "^22.7.9",
     "@types/sprintf-js": "^1.1.3",
+    "@vueuse/core": "^13.0.0",
     "chance": "^1.1.11",
     "crypto-js": "^4.2.0",
     "html2canvas": "^1.4.1",
     "json5": "^2.2.3",
     "lodash": "^4.17.21",
+    "sortablejs": "^1.15.6",
     "sprintf-js": "^1.1.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.1.4",
     "sass": "^1.80.3",
     "ts-node": "^10.9.2",
