--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "crypto-js": "^4.2.0",
     "html2canvas": "^1.4.1",
     "json5": "^2.2.3",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
     "sortablejs": "^1.15.6",
     "sprintf-js": "^1.1.3",
@@ -63,6 +65,8 @@
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
+    "@types/leaflet": "^1.9.17",
+    "@types/leaflet.markercluster": "^1.5.5",
     "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.1.4",
     "sass": "^1.80.3",
