feat(input): 添加 descriptionPlaceholder 属性以支持自定义占位文本
在 TiInputCode.vue 组件中，当 _item.value 为空时，默认返回空字符串。现在支持通过 props.descriptionPlaceholder 自定义占位文本，提升用户体验。同时在 ti-input-code-types.ts 中新增了 descriptionPlaceholder 类型定义。

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,12 +2,13 @@
   "useEditorConfig": false,
   "printWidth": 80,
   "htmlWhitespaceSensitivity": "css",
-  "singleQuote": true,
+  "singleQuote": false,
   "semi": true,
   "proseWrap": "always",
   "quoteProps": "consistent",
   "bracketSameLine": true,
   "vueIndentScriptAndStyle": true,
-  "jsxSingleQuote": true,
-  "singleAttributePerLine": true
+  "scriptIndent": false,
+  "jsxSingleQuote": false,
+  "trailingComma": "es5"
 }
