feat(editor): 添加富文本编辑器组件
添加基于 TinyMCE 的富文本编辑器组件 TiTinyMCEditor，包括：
- 组件实现文件及样式
- 类型定义和工具函数
- 在全局组件集合中注册
- 添加相关类型声明依赖
- 配置 vite 构建排除 tinymce 相关依赖

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/leaflet": "^1.9.17",
     "@types/leaflet.markercluster": "^1.5.5",
     "@types/sortablejs": "^1.15.8",
+    "@types/tinymce": "^5.5.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "sass": "^1.80.3",
     "ts-node": "^10.9.2",
