--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@site0/tijs",
-  "version": "1.8.8",
+  "version": "1.8.9",
   "description": "Web UI Libraray base on Vue",
   "repository": {
     "type": "git",
@@ -74,8 +74,7 @@
     "prosemirror-view": "^1.40.0",
     "sortablejs": "^1.15.6",
     "sprintf-js": "^1.1.3",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue": "^3.5.18"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
@@ -85,9 +84,9 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "sass": "^1.80.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
-    "vitest": "^2.1.3",
-    "vue-tsc": "^2.1.6"
+    "typescript": "^5.9.2",
+    "vite": "^5.4.19",
+    "vitest": "^2.1.9",
+    "vue-tsc": "^2.2.12"
   }
 }
