--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-gapcursor": "^1.3.2",
     "prosemirror-history": "^1.4.1",
+    "prosemirror-image-plugin": "^2.10.0",
     "prosemirror-inputrules": "^1.5.0",
     "prosemirror-keymap": "^1.2.3",
     "prosemirror-menu": "^1.2.5",
